@@ -182,8 +182,7 @@ scrollkeeper-update
 
 %{_datadir}/lilypond/@TOPLEVEL_VERSION@/
 %{_datadir}/locale/*/LC_MESSAGES/lilypond.mo
-
-# %{_libdir}/lilypond/
+%{_libdir}/lilypond/
 
 
 %files documentation
